--- a/WohnungSuchen/Views/OptionsView.xib
+++ b/WohnungSuchen/Views/OptionsView.xib
@@ -12,29 +12,37 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Pae-Xv-chn" customClass="OptionsView" customModule="WohnungSuchen" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="448"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="459"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Q6U-61-QH2">
-                    <rect key="frame" x="10" y="25" width="380" height="458.66666666666669"/>
+                    <rect key="frame" x="10" y="25" width="380" height="485"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="EXn-KK-tG9">
-                            <rect key="frame" x="20" y="0.0" width="340" height="35"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="djW-OS-TR5">
+                            <rect key="frame" x="118.66666666666667" y="0.0" width="142.66666666666663" height="61.333333333333336"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fv-C1-gQf">
-                                    <rect key="frame" x="305" y="0.0" width="35" height="35"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="35" id="AyO-gc-29C"/>
-                                        <constraint firstAttribute="width" constant="35" id="Qh3-rF-v0a"/>
-                                    </constraints>
-                                    <color key="tintColor" name="brandBlue"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" image="sun.max.fill" catalog="system"/>
-                                </button>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xCv-bb-U1H">
+                                    <rect key="frame" x="0.0" y="0.0" width="142.66666666666666" height="61.333333333333336"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Application theme:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EZh-O5-eew">
+                                            <rect key="frame" x="0.0" y="0.0" width="142.66666666666666" height="20.333333333333332"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" name="brandDark"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ga6-F3-5Br">
+                                            <rect key="frame" x="0.0" y="30.333333333333336" width="142.66666666666666" height="32"/>
+                                            <segments>
+                                                <segment title="First"/>
+                                                <segment title="Second"/>
+                                            </segments>
+                                        </segmentedControl>
+                                    </subviews>
+                                </stackView>
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="3lZ-6l-THA">
-                            <rect key="frame" x="77.666666666666686" y="60.000000000000014" width="225" height="182.33333333333337"/>
+                            <rect key="frame" x="77.666666666666686" y="86.333333333333329" width="225" height="182.33333333333337"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter apartments:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uz7-BL-aBz">
                                     <rect key="frame" x="45.333333333333329" y="0.0" width="134" height="20.333333333333332"/>
@@ -79,7 +87,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="yKM-uv-Spx">
-                                    <rect key="frame" x="0.0" y="93.333333333333343" width="225" height="35"/>
+                                    <rect key="frame" x="0.0" y="93.333333333333329" width="225" height="34.999999999999986"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wli-Fg-1dH">
                                             <rect key="frame" x="0.0" y="0.0" width="60" height="35"/>
@@ -115,7 +123,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="fUf-eQ-ivA">
-                                    <rect key="frame" x="0.0" y="147.33333333333334" width="225" height="35"/>
+                                    <rect key="frame" x="0.0" y="147.33333333333337" width="225" height="35"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Saw-65-Rsm">
                                             <rect key="frame" x="0.0" y="0.0" width="60" height="35"/>
@@ -153,7 +161,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8c3-HW-4Zo">
-                            <rect key="frame" x="91.666666666666671" y="267.33333333333331" width="196.66666666666663" height="35"/>
+                            <rect key="frame" x="91.666666666666671" y="293.66666666666669" width="196.66666666666663" height="35"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update every (s):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S04-sZ-Ojc">
                                     <rect key="frame" x="0.0" y="0.0" width="131.66666666666666" height="35"/>
@@ -178,7 +186,7 @@
                             </constraints>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tSU-3u-nvn">
-                            <rect key="frame" x="67.333333333333329" y="327.33333333333331" width="245.33333333333337" height="31"/>
+                            <rect key="frame" x="67.333333333333329" y="353.66666666666669" width="245.33333333333337" height="31"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Custom notification alert:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qPN-o2-lVe">
                                     <rect key="frame" x="0.0" y="0.0" width="191.33333333333334" height="31"/>
@@ -195,7 +203,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="B91-oZ-l0W">
-                            <rect key="frame" x="80" y="383.33333333333331" width="220" height="30"/>
+                            <rect key="frame" x="80" y="409.66666666666669" width="220" height="30"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Options as default:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nhy-3t-7HF">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="30"/>
@@ -219,7 +227,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Vmf-5S-Eft">
-                            <rect key="frame" x="40" y="438.33333333333331" width="300" height="20.333333333333314"/>
+                            <rect key="frame" x="40" y="464.66666666666669" width="300" height="20.333333333333314"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select available apartment providers:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hn9-Ml-F0D">
                                     <rect key="frame" x="0.0" y="0.0" width="300" height="20.333333333333332"/>
@@ -233,9 +241,6 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <constraints>
-                        <constraint firstAttribute="trailing" secondItem="EXn-KK-tG9" secondAttribute="trailing" constant="20" id="0iH-dO-1l9"/>
-                    </constraints>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="mlO-Kp-05f"/>
@@ -246,7 +251,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="appThemeButton" destination="1Fv-C1-gQf" id="4bh-qp-EZe"/>
+                <outlet property="appearanceSegmentedControl" destination="Ga6-F3-5Br" id="qKi-En-HGx"/>
                 <outlet property="areaMaxTextField" destination="5tz-XP-35M" id="bQm-Zy-ar7"/>
                 <outlet property="areaMinTextField" destination="Wli-Fg-1dH" id="4bT-33-Dtf"/>
                 <outlet property="availableProvidersLabel" destination="Hn9-Ml-F0D" id="jul-5I-YWV"/>
@@ -258,7 +263,7 @@
                 <outlet property="soundSwitch" destination="xof-tU-012" id="6S4-ZH-J3k"/>
                 <outlet property="timerUpdateTextField" destination="BuA-Ml-h5H" id="W5y-mL-fYc"/>
             </connections>
-            <point key="canvasLocation" x="274.80916030534348" y="-92.253521126760575"/>
+            <point key="canvasLocation" x="274.80916030534348" y="-88.380281690140848"/>
         </view>
     </objects>
     <designables>
@@ -267,7 +272,6 @@
         </designable>
     </designables>
     <resources>
-        <image name="sun.max.fill" catalog="system" width="128" height="125"/>
         <namedColor name="brandBlue">
             <color red="0.21568627450980393" green="0.52549019607843139" blue="0.78823529411764703" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
